# fire-alarm

./: .env  .gitignore  .gitmodules  Caddyfile  Cargo.toml  Dockerfile  README.md  compose.yaml  csv2sql.go  go.mod  setup.sh  setup.sql  wmata.csv
src/: lib.rs  main.rs
wmata/: lines.csv  statements.sql  stations.csv
