[package]
name = "fire-alarm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argfile = { version = "0.2.1", optional = true }
camino = "1.2.1"
chrono = { version = "0.4.42", default-features = false, features = [
    "now",
    "serde",
] }
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", optional = true }
env_logger = { version = "0.11.8", optional = true }
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "pool",
    "tokio1-native-tls",
    "serde",
    "smtp-transport",
] }
log = { version = "0.4.29", optional = true }
reqwest = { version = "0.13.1", features = ["json"] }
sea-orm = { version = "1.1.19", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[features]
env = ["clap/env"]
argfile = ["dep:argfile"]
log = ["dep:clap-verbosity-flag", "dep:env_logger", "dep:log"]